[package]
name = "wifi_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
fern = "0.6"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.37", features = ["fs", "process", "macros", "rt-multi-thread"]}
curl-parser = { git = "https://github.com/deadash/curl-parser.git" }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true